# estaciona-ai

./: .env.example  .gitattribute  .gitattributes  .gitignore  .gitmodules  CNAME  LICENSE  NOTICE  README.md
gateway/: README.md  experiments.md  gateway.py  pyproject.toml
gateway/ml/: generate_data.py  inference.py  train.py
gateway/tests/: test_gateway.py
server/: Cargo.toml  README.md  parking_graph.json  pyproject.toml  pytest.ini  schema.sql
server/.sqlx/: query-018c6a55ece836509dc4b615d8e50c38d05e9b6be4adfa54782d18a6630b0346.json  query-06a5180ac6dd5377e1b5ff21205653616ecd3aeb3aae464e258a448ac5723278.json  query-10421498b75b1c700c36ae34ed85ee6a8e4077ddc40819679a1b30641badf478.json  query-135c3d34841b2a54d5f3743685b0798be383ca12a0a6d2511cd1199aa1de195c.json  query-19698d9fb2b9e069ee632cfeb66f07336bb61715f2d21a1878c175d8e33f9f3a.json  query-21223d4583fd81a6a03575abbdc8c7e7a16c050682f8187e16d229b57e3b7f15.json  query-254267d5a687d63b4817133e9624fbb55bafca410b4e2c1c58042c8eec889473.json  query-2ac42a495965be3440e49147253482ec568b5b7921a23f063d5c47232b41404d.json  query-2c09e5437255c564b6ea27dddbcb5e55a00af4819c2181f91a381971e8e616e6.json  query-2c45cd3734e72fd1226e0293e68313708f7b66fe5865a96b1ecfbe80ab3cc90d.json  query-3504d517dfce55e12aa4a80381ac54236ed74f8038919f3efb7c7774090eaa1b.json  query-38c032169e9f39f3eaf06df342a27c4efd332592673961bba672a54ffd127776.json  query-3e2e80164c4d8741ee742563e48cd2abf0f602f8c9222d337b57144f9720bc25.json  query-465c1de6d4d2706f141787830d670947b75e0d6658bf272931c6b4cba6907e49.json  query-47ea65b99a8fd19fb5175709efefb75c5b2d7635b0578b50c4a2e8f4cba6b084.json  query-48fec396388fa3fa66a66dcea3f49bbc0a737cd517628d04a53f77efcb9f0139.json  query-4c7c4f4d453e48929279702111eb43abaaaafb96788f13775162dd17d3ac3e0d.json  query-51164a4564a8dd2449a2f30886145e62c9c952f665b08bc4ec7dc41a7e4ceb31.json  query-57810743817881c0a0a2671b162e7f53ee0a0ec6b50c3bb96eb397d0c5261cd9.json  query-5b56e8687a7300bb204b5ec1f82612f6c68c709a75eeb376d24cafe595456d3a.json  query-5bd6ed2b5d52afd737fc97e5704d61fe661cd5b18468e5f12fcb5fc199b4ae4a.json  query-5c874ff813efde1894f1de48d91885d9e857f688e1135ada2e263beee910200a.json  query-5cba173b6b689cf0d45cac9bd14d2d7aadd2c0129708962ae8e3fd07f4d7027e.json  query-5ed7c1bda1417bb735e2b582444efda032fba2c2c13a9399da9c35a2824b3c2a.json  query-622ba2a2cb72667defc8e90484f25e90ac8a833f64fc6e8e212d6d9881b27a25.json  query-6b9c503f71c31f09468852c351bd83d26582e97fef221e015a6340504f3fcd22.json  query-74b7f83927c9de7a13ce03dec1b4988d934bbe3a736f69873524aaac07ee2515.json  query-7624ea07facc21876ae1562b4eb3bd3dd74e9195001f66735466def2ee68395e.json  query-76b819d2ba479641825bb11af7eaf18cf299417d149607adc1181adbe90e2b7e.json  query-7d5ffe1dfc4d5f9d69259e9e2da727c557b3094197c576619cb3c7b42711a6d6.json  query-7dadd76cbd51d6acf4b7ad911d1140107d0c16122ff8af95a2308d0171f0b94a.json  query-7df7478c81964c533dde2c0bbdc673973462959be61ea7e39a238a8c5378bc0b.json  query-8db7886f6dd45baca8c7447a6d23a3fa2483c5aad00256f9a6a645e305c6539c.json  query-a0dc59694b22525ae560a39e242f31d9443c4cd698b57c83bd487017fd8aa1d8.json  query-a207d81cc3c5c7692dd2f18faa39444c3eccedda6e59fb3f2115fa1807551e8f.json  query-a51961ded3ec9ab0b2eca1ababfb602dd4ed7de6f62769a7754b7b11c5f1ecf9.json  query-a8bd0cec67e7c0df0e17897f5c44fd1caabd88b13b68eeda26beb557bdc21395.json  query-a9178123cf7f54aec28a0785c2bbe74d008f5b1c3364a081f7dead5f7352d106.json  (+16 more)
server/src/: auth.rs  db.py  dependencies.py  (+15 more)
server_rust/: Cargo.toml
(+111 files in other folders)
