[project]
name = "gateway"
version = "0.1.0"
description = "Estaciona AI Gateway"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["python-dotenv>=1.2.2", "websockets>=16.0"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.16"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
ignore = ["E402", "E741"]
