[package]
name = "estaciona-ai-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

# OWASP
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
hmac = "0.13.0"
sha2 = "0.11.0"
argon2 = "0.5.3"
tower-http = { version = "0.6.11", features = ["limit", "cors", "trace", "fs"] }
rand_core = { version = "0.6", features = ["getrandom"] }
