[project]
name = "estaciona-ai-python-server"
version = "0.1.0"
description = "Mock server for Estaciona AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
